Agentes se anuncian en bancarrota
